# lxqt-wayland-session

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  lxqt-qdbus.in  lxqt2labwcexporter.in  startlxqtwayland.in
.github/ISSUE_TEMPLATE/: bug-report.md
configurations/: CMakeLists.txt  lxqt-hyprland.conf  lxqt-hyprland.lua  lxqt-niri.kdl  lxqt-niri.kdl.full  lxqt-river-init  lxqt-sway.config  lxqt-wayfire.ini
configurations/firstrun/: autostart  hypr.conf  niri.kdl  sway.config  wayfire.ini
configurations/labwc/: autostart  environment  menu.xml  rc.xml  themerc-override
configurations/miriway/: lxqt-miriway-wrapper  miriway-shell.config
configurations/niri/: input.kdl  keybinds.kdl  outputs.kdl  visual.kdl  window-rules.kdl
labwc-themes/: CMakeLists.txt
labwc-themes/Vent-dark/openbox-3/: themerc
labwc-themes/Vent/openbox-3/: themerc
man/: CMakeLists.txt  lxqt-wayland-session.1  startlxqtwayland.1
